--- a/Aulas/exercicio2.html
+++ b/Aulas/exercicio2.html
@@ -23,7 +23,8 @@
         </div>
     </section>
 <footer> 
-   &copy; Mayara Pinheiro.
+
+  <p>&copy; Mayara Pinheiro.</p> 
 </footer>
     </header>
 <script src="script.js"></script>
