--- a/exercicionum/exercicionum1.html
+++ b/exercicionum/exercicionum1.html
@@ -11,12 +11,12 @@
         <h1> Analisador de Números. </h1> 
 
     <section>
-        <div>
-           
+        <div>   
              Número entre ( 1 e 100 ): <input type="number" name="fnum" id="fnum" >
-           <input type="button" value="Adicionar"  onclick="somar ()">
-          <br> <br><select name="flista" id="flista" size="6"></select>]
-          <input type="button" value="finalizar" onclick="finalizar ()">
+            <input type="button" value="ADICIONAR"  onclick="adicionar ()">
+            <br> <br>
+            <select name="flista" id="flista" size="6"></select>
+            <input type="button" value="FINALIZAR" onclick="finalizar ()">
         </div>
         <div id= 'res'> 
             
